<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF6AA"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200sp"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:text="@string/C_A"
        android:textColor="#230202"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:background="@drawable/button"
        android:padding="20sp"
        android:text="@string/age"
        android:textColor="#09D0EA"
        android:layout_marginBottom="150sp"
        android:textSize="50sp"
       />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/date"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="50sp"
        android:textSize="@dimen/fourty"
     />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/a_m"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/fourty"
        />
</LinearLayout>
</ScrollView>